// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManagePayrollFrequencyContainer to match snapshot active 1`] = `
<body>
  <div>
    <div
      class="d-flex flex-column manage-company h-100"
    >
      <div
        class="d-flex layout-header align-items-center"
      >
        <div>
          <nav
            aria-label="breadcrumb"
          >
            <ol
              class="breadcrumb"
            >
              <li
                class="breadcrumb-item"
              >
                <a
                  href="#"
                  role="button"
                >
                  <a
                    href="/home"
                  >
                    Home
                  </a>
                </a>
              </li>
              <li
                class="breadcrumb-item"
              >
                <a
                  href="#"
                  role="button"
                >
                  <a
                    href="/companys"
                  >
                    Manage Company
                  </a>
                </a>
              </li>
            </ol>
          </nav>
          <h5 />
        </div>
        <div
          class="d-flex align-items-center justify-content-center tab-wrapper"
        />
        <div
          class="ml-auto"
        >
          <div>
            <button
              class="add-icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-plus-square fa-w-14 fa-lg "
                data-icon="plus-square"
                data-prefix="fal"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M400 64c8.8 0 16 7.2 16 16v352c0 8.8-7.2 16-16 16H48c-8.8 0-16-7.2-16-16V80c0-8.8 7.2-16 16-16h352m0-32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-60 206h-98v-98c0-6.6-5.4-12-12-12h-12c-6.6 0-12 5.4-12 12v98h-98c-6.6 0-12 5.4-12 12v12c0 6.6 5.4 12 12 12h98v98c0 6.6 5.4 12 12 12h12c6.6 0 12-5.4 12-12v-98h98c6.6 0 12-5.4 12-12v-12c0-6.6-5.4-12-12-12z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="error-banner d-flex align-items-center "
        >
          <div>
            <div
              class="error-heading"
            >
              OOPS!
            </div>
            <div
              class="error-reason"
            >
              Something went wrong! please try again.
            </div>
          </div>
          <div
            class="ml-auto"
          >
            <button
              class="btn btn-link"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-times fa-w-10 "
                color="#212529"
                data-icon="times"
                data-prefix="fal"
                focusable="false"
                role="img"
                style="font-size: 1.5rem;"
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="layout-content h-100 overflow-auto"
      >
        <div
          class="d-flex align-items-center justify-content-start h-75 bg-white mt-5 add-items"
        >
          <div
            class="p-5"
          >
            <h4
              class="mb-3"
            >
              No payroll frequency
              <br />
              has been set for this company
            </h4>
            <a
              href="/manage-company/payroll-frequency"
            >
              <button
                class="btn btn-primary"
                type="button"
              >
                ADD PAYROLL FREQUENCY
              </button>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ManagePayrollFrequencyContainer to match snapshot with data  1`] = `
<body>
  <div>
    <div
      class="d-flex flex-column manage-company h-100"
    >
      <div
        class="d-flex layout-header align-items-center"
      >
        <div>
          <nav
            aria-label="breadcrumb"
          >
            <ol
              class="breadcrumb"
            >
              <li
                class="breadcrumb-item"
              >
                <a
                  href="#"
                  role="button"
                >
                  <a
                    href="/home"
                  >
                    Home
                  </a>
                </a>
              </li>
              <li
                class="breadcrumb-item"
              >
                <a
                  href="#"
                  role="button"
                >
                  <a
                    href="/companys"
                  >
                    Manage Company
                  </a>
                </a>
              </li>
            </ol>
          </nav>
          <h5 />
        </div>
        <div
          class="d-flex align-items-center justify-content-center tab-wrapper"
        />
        <div
          class="ml-auto"
        >
          <div>
            <button
              class="add-icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-plus-square fa-w-14 fa-lg "
                data-icon="plus-square"
                data-prefix="fal"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M400 64c8.8 0 16 7.2 16 16v352c0 8.8-7.2 16-16 16H48c-8.8 0-16-7.2-16-16V80c0-8.8 7.2-16 16-16h352m0-32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-60 206h-98v-98c0-6.6-5.4-12-12-12h-12c-6.6 0-12 5.4-12 12v98h-98c-6.6 0-12 5.4-12 12v12c0 6.6 5.4 12 12 12h98v98c0 6.6 5.4 12 12 12h12c6.6 0 12-5.4 12-12v-98h98c6.6 0 12-5.4 12-12v-12c0-6.6-5.4-12-12-12z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="error-banner d-flex align-items-center "
        >
          <div>
            <div
              class="error-heading"
            >
              OOPS!
            </div>
            <div
              class="error-reason"
            >
              Something went wrong! please try again.
            </div>
          </div>
          <div
            class="ml-auto"
          >
            <button
              class="btn btn-link"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-times fa-w-10 "
                color="#212529"
                data-icon="times"
                data-prefix="fal"
                focusable="false"
                role="img"
                style="font-size: 1.5rem;"
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="layout-content h-100 overflow-auto"
      >
        <div
          class="loader-wrapper "
        >
          <div
            class="d-flex flex-column cspl-table undefined"
          >
            <div
              class="d-flex table-head align-items-center undefined"
            >
              <div
                class="d-flex table-row undefined"
              >
                <div
                  class="d-flex table-head-cell column-frequency-name  undefined"
                >
                  Frequency Name
                </div>
                <div
                  class="d-flex table-head-cell column-payroll-frequency  undefined"
                >
                  Payroll Frequency
                </div>
              </div>
            </div>
            <div
              class="d-flex flex-column table-body undefined"
            >
              <div
                class="d-flex table-row undefined"
              >
                <div
                  class="d-flex table-cell column-frequency-name"
                >
                  <a
                    href="/manage-company/payroll-frequency//1"
                  >
                    PRF-WI
                  </a>
                </div>
                <div
                  class="d-flex table-cell column-payroll-frequency"
                >
                  Weekly
                </div>
              </div>
              <div
                class="d-flex table-row undefined"
              >
                <div
                  class="d-flex table-cell column-frequency-name"
                >
                  <a
                    href="/manage-company/payroll-frequency//2"
                  >
                    PRF-Y
                  </a>
                </div>
                <div
                  class="d-flex table-cell column-payroll-frequency"
                >
                  BiWeekly
                </div>
              </div>
              <div
                class="d-flex table-row undefined"
              >
                <div
                  class="d-flex table-cell column-frequency-name"
                >
                  <a
                    href="/manage-company/payroll-frequency//3"
                  >
                    PRF-D
                  </a>
                </div>
                <div
                  class="d-flex table-cell column-payroll-frequency"
                >
                  Daily
                </div>
              </div>
              <div
                class="d-flex table-row undefined"
              >
                <div
                  class="d-flex table-cell column-frequency-name"
                >
                  <a
                    href="/manage-company/payroll-frequency//4"
                  >
                    PRF-SM
                  </a>
                </div>
                <div
                  class="d-flex table-cell column-payroll-frequency"
                >
                  Annually
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-atomic="true"
        aria-live="assertive"
        class="fade toast show"
        role="alert"
        style="position: fixed; bottom: 4rem; left: 6rem; z-index: 100;"
      >
        <div
          class="toast-body"
        />
      </div>
    </div>
  </div>
</body>
`;
